@@ -1,6 +1,14 @@
+2011-09-13 Lorenzo Natale <lorenzo.natale@iit.it>
+    
+	* src/tools/iCubGui/src/qavimator.cpp
+	* src/tools/iCubGui/src/ui_mainapplicationform.h
+	
+	added width and hight options to control the size of the window
+
+
 2011-10-28 Alessandro Scalzo <alessandro.scalzo@iit.it>
-    	Added dragonfly2raw driver (raw image framegrabber support).
-        * main/src/libraries/icubmod/dragonfly2/common/*.*
+    Added dragonfly2raw driver (raw image framegrabber support).
+    * main/src/libraries/icubmod/dragonfly2/common/*.*
 	* main/src/libraries/icubmod/dragonfly2/linux/*.*
 	* main/src/libraries/icubmod/dragonfly2/winnt/*.*
 
